fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,11 +419,11 @@ body {
   }
   .spacer3{
     /* background-color: var(--secondaryColor); */
-    height: 10vh;
+    height: 2.5vw;
   }
   .spacer4{
     /* background-color: var(--secondaryColor); */
-    height: 5vh;
+    height: 3vw;
   }
   .spacer5{
     /* background-color: var(--secondaryColor); */
@@ -439,7 +439,7 @@ body {
     padding-left: 5%;
     font-family: headerFont, sans-serif;
     font-weight: 700;
-    font-size: 2.5rem;
+    font-size: 4vw;
   }
   
   .underline{
@@ -459,7 +459,7 @@ body {
     width: 85%;
     padding-left: 5%;
     font-family: subHeaderFont, sans-serif;
-    font-size: 1.25rem;
+    font-size: 2vw;
   }
 
   .contact{
